laborations/lab1/testsuite/bad/bad028.cc
struct bar {
	int baz;
        double foo;
}
